# ComfyUI-TranslationNode

./: .gitignore  LICENCE  README.md  __init__.py  pyproject.toml  requirements.txt  translation_node.py
.github/workflows/: publish.yml
