[project]
name = "translationnode"
description = "Offline translation node for ComfyUI, powered by Facebook's M2M-100 multilingual model. Translate text between 100+ languages — completely offline and private."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["transformers>=4.41.0", "sentencepiece", "torch", "langdetect"]

[project.urls]
Repository = "https://github.com/petr-pr/ComfyUI-TranslationNode"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/petr-pr/ComfyUI-TranslationNode/wiki"
"Bug Tracker" = "https://github.com/petr-pr/ComfyUI-TranslationNode/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TranslationNode"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

